gateway-setup/distribute-gateways/chainsaw-test copy.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: gloo-installation-test
spec:
  concurrent: false
  timeouts:
    exec: 360s
  steps:
  - try:
    - assert:
        resource:
          ($values.glooVersion != null): true
    - assert:
        resource:
          ($values.glooLicense != null): true
    - assert:
        resource:
          ($values.glooMeshVersion != null): true
    - assert:
        resource:
          ($values.glooMeshLicense != null): true
  - try:
    - script:
        content: |
          bash scripts/preflight.sh
  - clusters:
      k3d-worker:
        kubeconfig: resources/test-kubeconfig.yaml
        context: k3d-worker
    cluster: k3d-worker
    try:
    - script:
        env:
        - name: GLOO_VERSION
          value: ($values.glooVersion)
        - name: GLOO_GATEWAY_LICENSE_KEY
          value: ($values.glooLicense)
        - name: GLOO_MESH_VERSION
          value: ($values.glooMeshVersion)
        - name: GLOO_MESH_LICENSE_KEY
          value: ($values.glooMeshLicense)
        content: |
          bash scripts/worker-setup.sh
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: gloo-control-plane
spec:
  concurrent: false
  steps:
  - try:
    - assert:
        resource:
          apiVersion: apps/v1
          kind: Deployment
          metadata:
            name: gloo
            namespace: gloo-system
          status:
            readyReplicas: 1
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: gloo-proxy-test
spec:
  concurrent: false
  steps:
  - try:
    - assert:
        resource:
          apiVersion: apps/v1
          kind: Deployment
          metadata:
            name: gloo-proxy-http
            namespace: gloo-system
          status:
            readyReplicas: 1
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: httpbin-test
spec:
  concurrent: false
  steps:
  - try:
    - assert:
        resource:
          apiVersion: apps/v1
          kind: Deployment
          metadata:
            name: httpbin
            namespace: httpbin
          status:
            readyReplicas: 1
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: netshoot-test
spec:
  concurrent: false
  steps:
  - try:
    - assert:
        resource:
          apiVersion: apps/v1
          kind: Deployment
          metadata:
            name: netshoot
            namespace: default
          status:
            readyReplicas: 1
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: smoke-test-routing
spec:
  concurrent: false
  steps:
  - try:
    - script:
        content: |
          kubectl exec deploy/netshoot -n default -- curl -i -w '%{http_code}' -o /dev/null -s http://gloo-proxy-http.gloo-system:8080/headers -H "Host: www.example.com"
        outputs:
        - name: statuscode
          value: ($stdout)
    - assert:
        resource:
          ($statuscode): "200"
